# crashd

./: .gitignore  CMakeLists.txt  README.md
files/launch/: crashd.conf.in  crashd.in
files/scripts/: save-core-dump.sh.in
src/crashd/: CMakeLists.txt  crashd.c.in
src/libSegFault/: CMakeLists.txt  libSegFault.c.in
